[package]
name = "ranx"
version = "0.1.0"
edition = "2021"
description = "A high-performance Rust reverse proxy"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
tokio-rustls = "0.24"
futures = "0.3"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"
